AbstractSweeperTest: checkstyle